tests/failing/2-not_compile_time_str/main.rgo
str: @str
exit: @exit
printf: @printf
bar: (fmt: str!) {
    printf(fmt, exit(0))
}
foo: (fmt: str) {
    bar(fmt)
}
main: () {
    foo("Hi %s\n")
}
